--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6OtKXvNUKuuHkuH+AhmMP1/QSxiYUkjFB4mQr9IQ/S1VA0o5SsWkU84H3RjiiUrpj7SkEOj8MJ6PAW/eYvkMbG3BOA2p2Hs+PzmuJPaOQNMTkB5S+IzYDZW2RsHeGkya">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RvcA2nYlXOIcty8U9J2gEKZ1HE1e4ZR3F2WxWMzalsC6ogyOYud5Dbk0JYSmoJ+Kqhiydn2DgNOSgBHlKV0t73xYD/i6E4UxS7KCrCAquY5DzvxhZoC8ym4mCtWTh3YW">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
