--- a/media.html
+++ b/media.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section group="Media" plugins="soundcloud-plugin" data-rv-view="338">
+<section group="Media" plugins="soundcloud-plugin" data-rv-view="351">
 
     <mbr-parameters>
         <header>Size</header>
@@ -362,7 +362,11 @@
         <header>Show/Hide</header>
         <input type="checkbox" title="Title" name="showTitle">
         <input type="checkbox" title="Autoplay" name="autoplay">
-        <input type="text" title="Track ID" name="trackId" value="234652184">
+
+        <input type="radio" title="Track" name="itemType" value="tracks" checked="">
+        <input type="radio" title="Playlist" name="itemType" value="playlists">
+        <input type="text" title="ID" name="itemId" value="234652184">
+
         <input type="color" title="Bg Color" name="bgColor" value="#fafafa">
     </mbr-parameters>
 
@@ -371,7 +375,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-{{scWidth}}">
                 <figure class="mobirise-loader mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
-                    <iframe class="mbr-embedded-video" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{trackId}}&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true" frameborder="0" allowfullscreen=""></iframe>
+                    <iframe class="mbr-embedded-video" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/{{itemType}}/{{itemId}}&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true" frameborder="0" allowfullscreen=""></iframe>
                 </figure>
             </div>
         </div>
