--- a/community.html
+++ b/community.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -199,11 +199,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_63" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_97" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">About The Program</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_63" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_97" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">At Barrett Insurance we believe in the importance of education. To show our commitment, we developed the Barrett Insurance "Student of the Week Award of Excellence" to honor our local students. We continue to highlight select students from around the region to showcase their scholastic acumen and impressive achievements. 
 <br>
@@ -215,12 +215,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_63" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_97" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">Participating Schools</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_63" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_97" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Camden-Frontier 
 <br>Jonesville 
